[package]
name = "ctranslate2-example-generator"
version = "0.4.3"
authors = ["Junpei Kawamoto <kawamoto.junpei@gmail.com>"]
edition = "2021"
description = "Generate text using CTranslate2"
repository = "https://github.com/jkawamoto/ctranslate2-rs"
license-file = "../../LICENSE"


[dependencies]
ctranslate2 = { path = "../.." }
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
