[package]
name = "ctranslate2-example-generator"
version = "0.4.4"
authors = ["Junpei Kawamoto <kawamoto.junpei@gmail.com>"]
edition = "2021"
description = "Generate text using CTranslate2"
repository = "https://github.com/jkawamoto/ctranslate2-rs"
license-file = "../../LICENSE"


[dependencies]
ct2rs = { path = "../.." }
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
