[package]
name = "ctranslate2-example-nllb"
version = "0.4.2"
authors = ["Junpei Kawamoto <kawamoto.junpei@gmail.com>"]
edition = "2021"
description = "Translate a file using NLLB"
repository = "https://github.com/jkawamoto/ctranslate2-rs"
license-file = "../../LICENSE"


[dependencies]
ctranslate2 = { path = "../.." }
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
