[package]
name = "ctranslate2-example-nllb"
version = "0.4.4"
authors = ["Junpei Kawamoto <kawamoto.junpei@gmail.com>"]
edition = "2021"
description = "Translate a file using NLLB"
repository = "https://github.com/jkawamoto/ctranslate2-rs"
license = "MIT"


[dependencies]
ct2rs = { path = "../.." }
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
